# AckerunObfOpenSource

./: README.md  config.yaml  obf.rar
native/: build.bat  build.gradle  config.yml
native/output/cpp/: CMakeLists.txt  native_jvm_output.cpp  string_pool.cpp
native/output/cpp/output/: ControlleurThreads.cpp  ControlleurThreads.hpp  DataOfSquare.cpp  DataOfSquare.hpp  KeyboardListenner.cpp  KeyboardListenner.hpp  Main.cpp  Main.hpp  SquarePanel.cpp  SquarePanel.hpp  ThreadSquare.cpp  ThreadSquare.hpp  Tuple.cpp  Tuple.hpp  Window.cpp  Window.hpp
native/src/main/java/by/radioegor146/: Encryption.java  HWID.java  Main.java  MethodProcessor.java  NativeObfuscator.java  Util.java
native/src/main/java/by/radioegor146/config/: Config.java  ConfigManager.java
native/src/main/java/com/coter/annotation/: Obfuscation.java
