cmake_minimum_required(VERSION 3.8)
project(Snake)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY build/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/lib)

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 6.0)
        message(FATAL_ERROR "GCC version must be at least 6.0!")
    endif()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -s -DNDEBUG")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/lib)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG build/lib)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE build/lib)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build/lib)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG build/lib)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE build/lib)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP8 /wd4102 /EHsc")
else()
    message(FATAL_ERROR "You are using an unsupported compiler! Compilation has only been tested with MSVC and GCC.")
endif()

find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})

set(CLASS_FILES output/ControlleurThreads.hpp output/ControlleurThreads.cpp output/DataOfSquare.hpp output/DataOfSquare.cpp output/KeyboardListenner.hpp output/KeyboardListenner.cpp output/Main.hpp output/Main.cpp output/SquarePanel.hpp output/SquarePanel.cpp output/ThreadSquare.hpp output/ThreadSquare.cpp output/Tuple.hpp output/Tuple.cpp output/Window.hpp output/Window.cpp)
set(MAIN_FILES native_jvm.hpp native_jvm.cpp native_jvm_output.hpp native_jvm_output.cpp string_pool.hpp string_pool.cpp)
add_library(Snake SHARED ${CLASS_FILES} ${MAIN_FILES})
